[gd_scene load_steps=21 format=2]

[ext_resource path="res://tilemap/interior.png" type="Texture" id=1]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://tilemap/black.png" type="Texture" id=3]
[ext_resource path="res://scene/character.tscn" type="PackedScene" id=4]
[ext_resource path="res://laut.tscn" type="PackedScene" id=5]
[ext_resource path="res://tilemap/interior/jam.png" type="Texture" id=6]
[ext_resource path="res://tilemap/perapian.png" type="Texture" id=7]
[ext_resource path="res://tilemap/interior/meja.tscn" type="PackedScene" id=8]
[ext_resource path="res://tilemap/interior/lemari.tscn" type="PackedScene" id=9]
[ext_resource path="res://tilemap/interior/lemaribeasr.tscn" type="PackedScene" id=10]
[ext_resource path="res://tilemap/interior/pintu.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/perpustakaan.gd" type="Script" id=12]
[ext_resource path="res://masukrumah.tscn" type="PackedScene" id=13]
[ext_resource path="res://masukrumah2.gd" type="Script" id=14]
[ext_resource path="res://tilemap/interior/peti.tscn" type="PackedScene" id=15]
[ext_resource path="res://tilemap/interior/lemaribuku.tscn" type="PackedScene" id=16]
[ext_resource path="res://tilemap/button/book_01.tscn" type="PackedScene" id=17]
[ext_resource path="res://font/font_untuk_reward.tres" type="DynamicFont" id=18]
[ext_resource path="res://tilemap/button/tombolx2.tscn" type="PackedScene" id=19]
[ext_resource path="res://tilemap/animation book.tscn" type="PackedScene" id=20]

[node name="Node2D" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_horizontal_guides_": [ -136.0, 264.0 ],
"_edit_vertical_guides_": [ 0.0, 320.0 ]
}

[node name="laut" parent="." instance=ExtResource( 5 )]
position = Vector2( 16, 384 )
tile_data = PoolIntArray( -2162690, 7, 0, -2162689, 7, 0, -2228224, 7, 0, -2228223, 7, 0, -2228222, 7, 0, -2228221, 7, 0, -2228220, 7, 0, -2228219, 7, 0, -2228218, 7, 0, -2228217, 7, 0, -2228216, 7, 0, -2228215, 7, 0, -2228214, 7, 0, -2228213, 7, 0, -2228212, 7, 0, -2228211, 7, 0, -2228210, 7, 0, -2228209, 7, 0, -2228208, 7, 0, -2228207, 7, 0, -2228206, 7, 0, -2228205, 7, 0, -2097154, 7, 0, -2097153, 7, 0, -2162688, 7, 0, -2162687, 7, 0, -2162686, 7, 0, -2162685, 7, 0, -2162684, 7, 0, -2162683, 7, 0, -2162682, 7, 0, -2162681, 7, 0, -2162680, 7, 0, -2162679, 7, 0, -2162678, 7, 0, -2162677, 7, 0, -2162676, 7, 0, -2162675, 7, 0, -2162674, 7, 0, -2162673, 7, 0, -2162672, 7, 0, -2162671, 7, 0, -2162670, 7, 0, -2162669, 7, 0, -2031618, 7, 0, -2031617, 7, 0, -2097152, 7, 0, -2097151, 7, 0, -2097150, 7, 0, -2097149, 7, 0, -2097148, 7, 0, -2097147, 7, 0, -2097146, 7, 0, -2097145, 7, 0, -2097144, 7, 0, -2097143, 7, 0, -2097142, 7, 0, -2097141, 7, 0, -2097140, 7, 0, -2097139, 7, 0, -2097138, 7, 0, -2097137, 7, 0, -2097136, 7, 0, -2097135, 7, 0, -2097134, 7, 0, -2097133, 7, 0, -1966082, 7, 0, -1966081, 7, 0, -2031616, 7, 0, -2031615, 7, 0, -2031614, 7, 0, -2031604, 7, 0, -2031601, 7, 0, -2031600, 7, 0, -2031599, 7, 0, -2031598, 7, 0, -2031597, 7, 0, -1900546, 7, 0, -1900545, 7, 0, -1966080, 7, 0, -1966079, 7, 0, -1966078, 7, 0, -1966065, 7, 0, -1966064, 7, 0, -1966063, 7, 0, -1966062, 7, 0, -1966061, 7, 0, -1835010, 7, 0, -1835009, 7, 0, -1900544, 7, 0, -1900543, 7, 0, -1900542, 7, 0, -1900529, 7, 0, -1900528, 7, 0, -1900527, 7, 0, -1900526, 7, 0, -1900525, 7, 0, -1769474, 7, 0, -1769473, 7, 0, -1835008, 7, 0, -1835007, 7, 0, -1835006, 7, 0, -1834993, 7, 0, -1834992, 7, 0, -1834991, 7, 0, -1834990, 7, 0, -1834989, 7, 0, -1703938, 7, 0, -1703937, 7, 0, -1769472, 7, 0, -1769471, 7, 0, -1769470, 7, 0, -1769457, 7, 0, -1769456, 7, 0, -1769455, 7, 0, -1769454, 7, 0, -1769453, 7, 0, -1638402, 7, 0, -1638401, 7, 0, -1703936, 7, 0, -1703935, 7, 0, -1703934, 7, 0, -1703921, 7, 0, -1703920, 7, 0, -1703919, 7, 0, -1703918, 7, 0, -1703917, 7, 0, -1572866, 7, 0, -1572865, 7, 0, -1638400, 7, 0, -1638399, 7, 0, -1638398, 7, 0, -1638385, 7, 0, -1638384, 7, 0, -1638383, 7, 0, -1638382, 7, 0, -1638381, 7, 0, -1507330, 7, 0, -1507329, 7, 0, -1572864, 7, 0, -1572863, 7, 0, -1572862, 7, 0, -1572849, 7, 0, -1572848, 7, 0, -1572847, 7, 0, -1572846, 7, 0, -1572845, 7, 0, -1441794, 7, 0, -1441793, 7, 0, -1507328, 7, 0, -1507327, 7, 0, -1507326, 7, 0, -1507313, 7, 0, -1507312, 7, 0, -1507311, 7, 0, -1507310, 7, 0, -1507309, 7, 0, -1376258, 7, 0, -1376257, 7, 0, -1441792, 7, 0, -1441791, 7, 0, -1441790, 7, 0, -1441777, 7, 0, -1441776, 7, 0, -1441775, 7, 0, -1441774, 7, 0, -1441773, 7, 0, -1310722, 7, 0, -1310721, 7, 0, -1376256, 7, 0, -1376255, 7, 0, -1376254, 7, 0, -1376241, 7, 0, -1376240, 7, 0, -1376239, 7, 0, -1376238, 7, 0, -1376237, 7, 0, -1245186, 7, 0, -1245185, 7, 0, -1310720, 7, 0, -1310719, 7, 0, -1310718, 7, 0, -1310705, 7, 0, -1310704, 7, 0, -1310703, 7, 0, -1310702, 7, 0, -1310701, 7, 0, -1179650, 7, 0, -1179649, 7, 0, -1245184, 7, 0, -1245183, 7, 0, -1245182, 7, 0, -1245169, 7, 0, -1245168, 7, 0, -1245167, 7, 0, -1245166, 7, 0, -1245165, 7, 0, -1114114, 7, 0, -1114113, 7, 0, -1179648, 7, 0, -1179647, 7, 0, -1179646, 7, 0, -1179633, 7, 0, -1179632, 7, 0, -1179631, 7, 0, -1179630, 7, 0, -1179629, 7, 0, -1048578, 7, 0, -1048577, 7, 0, -1114112, 7, 0, -1114111, 7, 0, -1114110, 7, 0, -1114097, 7, 0, -1114096, 7, 0, -1114095, 7, 0, -1114094, 7, 0, -1114093, 7, 0, -983042, 7, 0, -983041, 7, 0, -1048576, 7, 0, -1048575, 7, 0, -1048574, 7, 0, -1048561, 7, 0, -1048560, 7, 0, -1048559, 7, 0, -1048558, 7, 0, -1048557, 7, 0, -917506, 7, 0, -917505, 7, 0, -983040, 7, 0, -983039, 7, 0, -983038, 7, 0, -983025, 7, 0, -983024, 7, 0, -983023, 7, 0, -983022, 7, 0, -983021, 7, 0, -851970, 7, 0, -851969, 7, 0, -917504, 7, 0, -917503, 7, 0, -917502, 7, 0, -917489, 7, 0, -917488, 7, 0, -917487, 7, 0, -917486, 7, 0, -917485, 7, 0, -786434, 7, 0, -786433, 7, 0, -851968, 7, 0, -851967, 7, 0, -851966, 7, 0, -851953, 7, 0, -851952, 7, 0, -851951, 7, 0, -851950, 7, 0, -851949, 7, 0, -720898, 7, 0, -720897, 7, 0, -786432, 7, 0, -786431, 7, 0, -786430, 7, 0, -786417, 7, 0, -786416, 7, 0, -786415, 7, 0, -786414, 7, 0, -786413, 7, 0, -655362, 7, 0, -655361, 7, 0, -720896, 7, 0, -720895, 7, 0, -720894, 7, 0, -720881, 7, 0, -720880, 7, 0, -720879, 7, 0, -720878, 7, 0, -720877, 7, 0, -589826, 7, 0, -589825, 7, 0, -655360, 7, 0, -655359, 7, 0, -655358, 7, 0, -655345, 7, 0, -655344, 7, 0, -655343, 7, 0, -655342, 7, 0, -655341, 7, 0, -524290, 7, 0, -524289, 7, 0, -589824, 7, 0, -589823, 7, 0, -589822, 7, 0, -589809, 7, 0, -589808, 7, 0, -589807, 7, 0, -589806, 7, 0, -589805, 7, 0, -458754, 7, 0, -458753, 7, 0, -524288, 7, 0, -524287, 7, 0, -524286, 7, 0, -524285, 7, 0, -524284, 7, 0, -524283, 7, 0, -524282, 7, 0, -524281, 7, 0, -524278, 7, 0, -524277, 7, 0, -524276, 7, 0, -524275, 7, 0, -524274, 7, 0, -524273, 7, 0, -524272, 7, 0, -524271, 7, 0, -524270, 7, 0, -524269, 7, 0, -393218, 7, 0, -393217, 7, 0, -458752, 7, 0, -458751, 7, 0, -458750, 7, 0, -458749, 7, 0, -458748, 7, 0, -458747, 7, 0, -458746, 7, 0, -458745, 7, 0, -458744, 7, 0, -458743, 7, 0, -458742, 7, 0, -458741, 7, 0, -458740, 7, 0, -458739, 7, 0, -458738, 7, 0, -458737, 7, 0, -458736, 7, 0, -458735, 7, 0, -458734, 7, 0, -458733, 7, 0, 1114092, 0, 0, 1114093, 0, 0, 1179628, 0, 0, 1179629, 0, 0, 1245164, 0, 0, 1245165, 0, 0, 1310700, 0, 0, 1310701, 0, 0, 1376236, 0, 0, 1376237, 0, 0, 1441772, 0, 0, 1441773, 0, 0, 1441774, 0, 0, 1441775, 0, 0, 1507308, 0, 0, 1507309, 0, 0, 1507311, 0, 0, 1507312, 0, 0, 1572844, 0, 0, 1572845, 0, 0, 1572848, 0, 0, 1572849, 0, 0, 1638380, 0, 0, 1638381, 0, 0, 1638385, 0, 0, 1638386, 0, 0, 1638387, 0, 0, 1638388, 0, 0, 1703916, 0, 0, 1703917, 0, 0, 1703924, 0, 0, 1703925, 0, 0, 1703926, 0, 0, 1769452, 0, 0, 1769453, 0, 0, 1769462, 0, 0, 1769463, 0, 0, 1834988, 0, 0, 1834989, 0, 0, 1834990, 0, 0, 1834991, 0, 0, 1834992, 0, 0, 1834993, 0, 0, 1834994, 0, 0, 1834995, 0, 0, 1834996, 0, 0, 1834997, 0, 0, 1834998, 0, 0, 1834999, 0, 0, 1835000, 0, 0, 1835001, 0, 0, 1835002, 0, 0, 1835003, 0, 0, 1835004, 0, 0, 1835005, 0, 0 )

[node name="interior" type="Sprite" parent="."]
position = Vector2( 160, 72 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="black" type="Sprite" parent="."]
position = Vector2( 160, 272 )
texture = ExtResource( 3 )

[node name="masukrumah" parent="." instance=ExtResource( 13 )]
position = Vector2( 160, 258 )
script = ExtResource( 14 )
target_scene = "res://scene/bagian/WORLD.tscn"

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 241 )
limit_left = 0
limit_top = -136
limit_right = 320
limit_bottom = 264

[node name="YSort" type="YSort" parent="."]

[node name="perapian" type="Sprite" parent="YSort"]
position = Vector2( 160, -128 )
texture = ExtResource( 7 )

[node name="character" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 160, 241 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/character"]
remote_path = NodePath("../../../Camera2D")

[node name="lemari" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 88, -104 )

[node name="lemaribeasr" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 240, -104 )

[node name="lemari2" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 88, 232 )

[node name="pintu" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 191, 249 )

[node name="jam" type="Sprite" parent="YSort"]
position = Vector2( 216, -128 )
texture = ExtResource( 6 )

[node name="meja" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 88, 176 )

[node name="peti" parent="YSort" instance=ExtResource( 15 )]
position = Vector2( 240, 56 )

[node name="lemaribuku" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 88, 80 )

[node name="lemaribuku2" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 120, 80 )

[node name="lemaribuku3" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 152, 80 )

[node name="lemaribuku4" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 88, -24 )

[node name="lemaribuku5" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 120, -24 )

[node name="lemaribuku6" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 152, -24 )

[node name="lemaribuku7" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 232, 176 )

[node name="lemaribuku8" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 200, 176 )

[node name="book_01" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( -40, -160 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 320.0
margin_bottom = 160.0
color = Color( 0.0745098, 0.0196078, 0.0196078, 0.713726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation_book" parent="CanvasLayer" instance=ExtResource( 20 )]
visible = false

[node name="tombolx2" parent="CanvasLayer" instance=ExtResource( 19 )]
visible = false
position = Vector2( 264, 120 )

[node name="oke" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 239.0
margin_top = 115.0
margin_right = 279.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 18 )
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="released" from="CanvasLayer/tombolx2" to="." method="_on_tombolx2_released"]
